# shifu-matching

./: .gitignore  README.md  meson.build  server.py
crosscompile/: emscripten.txt
julia/: Manifest.toml  plot.jl
src/: defi.cpp  demo.cpp  funds.cpp  funds.hpp  funds_old.hpp  matching.hpp  order.hpp  wasm_api.hpp  with_uint64.hpp
src/defi/: defi.cpp  defi.hpp  price.hpp
src/defi/defi_uint64/: lazy_matching.cpp  lazy_matching.hpp  matcher.cpp  matcher.hpp  matching.cpp  matching.hpp  matching_tokenized.cpp  matching_tokenized.hpp  order.hpp  orderbook_matcher.cpp  orderbook_matcher.hpp  pool.hpp  prod.hpp  types.hpp
src/defi/uint64/: lazy_matching.hpp  matcher.hpp  orderbook.cpp  orderbook.hpp  pool.hpp  price.hpp  prod.hpp  sorted_order_vector.hpp  types.hpp
src/general/: errors.hpp  funds.cpp  funds.hpp
website/: demo.html  demo.js  demo.wasm
